--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,12 +59,31 @@ jobs:
       - run:
           command: |
             echo "Digest is: $(</tmp/digest.txt)"
+  test-run:
+    machine: true
+    parameters:
+      image_tag:
+        type: string
+      image_name:
+        type: string
+    steps:
+    # download image?
+      - run: docker pull gcr.io/${GOOGLE_PROJECT_ID}/<< parameters.image_name >>:<< parameters.image_tag >> .
+    # running the docker image with a random userID
+      - run: |
+          docker run -u 999999:0 << parameters.image_name >>:<< parameters.image_tag >>
+          docker exec metabase curl --retry 10 --retry-connrefused http://localhost:3000
+
 
 workflows:
   version: 2
   build:
     jobs:
       - build_and_deploy:
+          context: cas-pipeline
+          image_name: metabase
+          image_tag: ${CIRCLE_SHA1}
+      - test-run:
           context: cas-pipeline
           image_name: metabase
           image_tag: ${CIRCLE_SHA1}
