feat: fixing circleci job dependency and adding ubuntu 20.04 circleci machine

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,5 +88,6 @@ workflows:
       - test_anyuid:
           requires:
             - build_and_deploy
+          context: cas-pipeline
           image_name: metabase
           image_tag: ${CIRCLE_SHA1}
