feat: add backoffLimit to create-user-db and update cas-postgres

--- a/helm/cas-metabase/values.yaml
+++ b/helm/cas-metabase/values.yaml
@@ -26,6 +26,7 @@ cas-postgres:
     bucketSuffix:
 
 metabase:
+  replicaCount: 2
   image:
     repository: gcr.io/ggl-cas-storage/metabase
     tag: latest
