--- a/helm/cas-metabase/templates/create-user-db.yaml
+++ b/helm/cas-metabase/templates/create-user-db.yaml
@@ -17,6 +17,7 @@ metadata:
 spec:
   parallelism: 1
   completions: 1
+  backoffLimit: 10
   template:
     metadata:
       name: {{ template "cas-metabase.fullname" . }}-create-user-db
