--- a/helm/cas-metabase/values-wksv3k-prod.yaml
+++ b/helm/cas-metabase/values-wksv3k-prod.yaml
@@ -1,9 +1,9 @@
 cas-postgres:
   patroni:
-    replicaCount: 4
+    replicaCount: 3
     resources:
       limits:
-        cpu: 3000m
+        cpu: "1"
         memory: 2Gi
       requests:
         cpu: 15m
