feat: add make install script

--- a/helm/cas-metabase/values-wksv3k-prod.yaml
+++ b/helm/cas-metabase/values-wksv3k-prod.yaml
@@ -1,6 +1,5 @@
 cas-postgres:
   patroni:
-    replicaCount: 3
     resources:
       limits:
         cpu: "1"
@@ -11,10 +10,13 @@ cas-postgres:
     walE:
       enable: true
       # the GCS bucket name should be {{ namespace }}-{{ gcs.bucketSuffix }}
-      gcsBucket: wksv3k-prod-ciip-backups
+      gcsBucket: wksv3k-prod-metabase-backups
       # kubernetesSecret should be gcp-{{ namespace }}-{{ gcs.bucketSuffix }}-service-account-key
-      kubernetesSecret: gcp-wksv3k-prod-ciip-backups-service-account-key # pragma: allowlist secret
+      kubernetesSecret: gcp-wksv3k-prod-metabase-backups-service-account-key # pragma: allowlist secret
     # options below are required if walE.enable is true
   namespace: wksv3k-prod
   gcs:
-    bucketSuffix: ciip-backups
+    bucketSuffix: metabase-backups
+
+route:
+  host: cas-metabase-preview.pathfinder.gov.bc.ca
