--- a/helm/cas-metabase/values-9212c9-test.yaml
+++ b/helm/cas-metabase/values-9212c9-test.yaml
@@ -1,23 +1,16 @@
 cas-postgres:
   patroni:
-    resources:
-      limits:
-        cpu: "1"
-        memory: 2Gi
-      requests:
-        cpu: 15m
-        memory: 600Mi
     walE:
       enable: true
       # the GCS bucket name should be {{ namespace }}-{{ gcs.bucketSuffix }}, has to be < 28 characters
-      gcsBucket: wksv3k-prod-mb-backups
+      gcsBucket: 9212c9-test-mb-backups
       # kubernetesSecret should be gcp-{{ namespace }}-{{ gcs.bucketSuffix }}-service-account-key
-      kubernetesSecret: gcp-wksv3k-prod-mb-backups-service-account-key # pragma: allowlist secret
+      kubernetesSecret: gcp-9212c9-test-mb-backups-service-account-key # pragma: allowlist secret
     # options below are required if walE.enable is true
-  namespace: wksv3k-prod
+  namespace: 9212c9-test
   gcs:
     bucketSuffix: mb-backups
 
 route:
   enable: true
-  host: cas-metabase-preview.pathfinder.gov.bc.ca
+  host: cas-metabase-test.apps.silver.devops.gov.bc.ca
