feat: add NSPs and labels

--- a/helm/cas-metabase/templates/create-user-db.yaml
+++ b/helm/cas-metabase/templates/create-user-db.yaml
@@ -21,6 +21,7 @@ spec:
   template:
     metadata:
       name: {{ template "cas-metabase.fullname" . }}-create-user-db
+      labels: {{ include "cas-metabase.labels" . | nindent 8 }}
     spec:
       containers:
         - name: {{ template "cas-metabase.fullname" . }}-create-user-db
