--- a/helm/metabase/templates/config.yaml
+++ b/helm/metabase/templates/config.yaml
@@ -3,11 +3,7 @@ kind: ConfigMap
 metadata:
   name: {{ template "metabase.fullname" . }}-config
   namespace: {{ .Release.Namespace }}
-  labels:
-    app: {{ template "metabase.name" . }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+  labels: {{ include "metabase.labels" . | nindent 4 }}
 data:
   {{- if .Values.log4jProperties }}
   log4j.properties:
