--- a/helm/metabase/templates/ingress.yaml
+++ b/helm/metabase/templates/ingress.yaml
@@ -7,11 +7,7 @@ kind: Ingress
 metadata:
   name: {{ template "metabase.fullname" . }}
   namespace: {{ .Release.Namespace }}
-  labels:
-    app: {{ template "metabase.name" . }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+  labels: {{ include "metabase.labels" . | nindent 4 }}
   {{- range $key, $value := .Values.ingress.labels }}
     {{ $key }}: {{ $value | quote }}
   {{- end }}
