--- a/helm/metabase/templates/ssl-secret.yaml
+++ b/helm/metabase/templates/ssl-secret.yaml
@@ -4,11 +4,7 @@ kind: Secret
 metadata:
   name: {{ template "metabase.fullname" . }}-ssl
   namespace: {{ .Release.Namespace }}
-  labels:
-    app: {{ template "metabase.name" . }}
-    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+  labels: {{ include "metabase.labels" . | nindent 4 }}
 type: Opaque
 data:
   keystore: {{ .Values.ssl.keystore | b64enc | quote }}
