feat: add NSP to connect to GGIRCS app

--- a/helm/cas-metabase/values.yaml
+++ b/helm/cas-metabase/values.yaml
@@ -53,3 +53,6 @@ networkSecurityPolicies:
   ciip:
     namespace: ""
     instanceName: cas-ciip-portal
+  ggircs:
+    namespace: ""
+    instanceName: cas-ggircs
