--- a/helm/cas-metabase/templates/networksecuritypolicy/egress.yaml
+++ b/helm/cas-metabase/templates/networksecuritypolicy/egress.yaml
@@ -8,5 +8,7 @@ spec:
   source:
     - - $namespace={{ .Release.Namespace }}
       - app.kubernetes.io/instance={{ include "cas-metabase.name" . }}
+    - - $namespace={{ .Release.Namespace }}
+      - release={{ include "cas-metabase.name" . }}
   destination:
     - - ext:network=any
