--- a/helm/cas-metabase/templates/networksecuritypolicy/ggircs-db.yaml
+++ b/helm/cas-metabase/templates/networksecuritypolicy/ggircs-db.yaml
@@ -1,7 +1,7 @@
 kind: NetworkSecurityPolicy
 apiVersion: security.devops.gov.bc.ca/v1alpha1
 metadata:
-  name: {{ include "cas-metabase.fullname" . }}-to-ciip-db
+  name: {{ include "cas-metabase.fullname" . }}-to-ggircs-db
   labels: {{ include "cas-metabase.labels" . | nindent 4 }}
 spec:
   description: allow metabase to communicate with the GGIRCS application
