--- a/helm/metabase/values.yaml
+++ b/helm/metabase/values.yaml
@@ -134,3 +134,7 @@ tolerations: []
 ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#affinity-and-anti-affinity
 ##
 affinity: {}
+
+nginx:
+  enable: true
+  port: 3001
