--- a/helm/metabase/templates/deployment.yaml
+++ b/helm/metabase/templates/deployment.yaml
@@ -21,6 +21,15 @@ spec:
         {{- end }}
     spec:
       containers:
+        - name: {{ .Chart.Name }}-nginx
+          image: twalter/openshift-nginx
+          imagePullPolicy: Always
+          ports:
+            - containerPort: {{ .Values.nginx.port }}
+          volumeMounts:
+            - name: nginx-configs
+              mountPath: /etc/nginx/conf.d
+
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
@@ -155,3 +164,6 @@ spec:
             - key: log4j.properties
               path: log4j.properties
         {{- end }}
+        - name: nginx-configs
+          configMap:
+            name: {{ template "metabase.fullname" . }}-nginx-config
