feat: add acme issue and nginx ssl termination

--- a/helm/cas-metabase/templates/route.yaml
+++ b/helm/cas-metabase/templates/route.yaml
@@ -10,9 +10,11 @@ spec:
   host: {{ .Values.route.host }}
   port:
     targetPort: metabase
+{{- if .Values.metabase.nginx.sslTermination }}
   tls:
     insecureEdgeTerminationPolicy: Redirect
-    termination: edge
+    termination: passthrough
+{{- end }}
   to:
     kind: Service
     name:  {{ template "cas-metabase.fullname" . }}
