--- a/helm/cas-metabase/values.yaml
+++ b/helm/cas-metabase/values.yaml
@@ -49,6 +49,11 @@ metabase:
   podLabels:
     app.kubernetes.io/component: app
 
+  nginx:
+    # set to false to deploy the application with an insecure route,
+    # and issue an SSL certificate using acme.sh
+    sslTermination: true
+
 networkSecurityPolicies:
   enable: true
   ciip:
