--- a/helm/cas-metabase/values-prod.yaml
+++ b/helm/cas-metabase/values-prod.yaml
@@ -20,4 +20,16 @@ cas-postgres:
 
 route:
   enable: true
-  host: cas-metabase.apps.silver.devops.gov.bc.ca
+  host: cas-metabase.nrs.gov.bc.ca
+
+metabase:
+  nginxSidecar:
+    enable: true
+    # set to false to deploy the application with an insecure route,
+    # and issue an SSL certificate using acme.sh
+    sslTermination: false
+    # Use Entrust ACME server. This secret is created by cas-pipeline
+    caServerSecret: cas-acme-url
+    caServerKey: url
+    caEmail: matthieu@button.is # Todo: update to ggircs@gov.bc.ca when provisioned
+    hostName: cas-metabase.nrs.gov.bc.ca
