--- a/helm/cas-metabase/values.yaml
+++ b/helm/cas-metabase/values.yaml
@@ -49,10 +49,16 @@ metabase:
   podLabels:
     app.kubernetes.io/component: app
 
-  nginx:
+  nginxSidecar:
+    enable: false
     # set to false to deploy the application with an insecure route,
     # and issue an SSL certificate using acme.sh
     sslTermination: true
+    # If provided, the acme issue/renewal scripts will use a custom server
+    # Otherwise it defaults to Let's Encrypt
+    caServerSecret: ~
+    caServerKey: ~
+    storageClassName: netapp-file-standard
 
 networkSecurityPolicies:
   enable: true
