--- a/helm/metabase/templates/service.yaml
+++ b/helm/metabase/templates/service.yaml
@@ -16,7 +16,11 @@ spec:
 {{- end}}
   ports:
     - port: {{ .Values.service.externalPort }}
-      targetPort: {{ .Values.nginx.port }}
+      {{- if .Values.nginxSidecar.enable }}
+      targetPort: {{ .Values.nginxSidecar.port }}
+      {{- else }}
+      targetPort: {{ .Values.service.internalPort }}
+      {{- end }}
 {{- if .Values.service.nodePort }}
       nodePort: {{ .Values.service.nodePort }}
 {{- end}}
