--- a/helm/cas-metabase/values.yaml
+++ b/helm/cas-metabase/values.yaml
@@ -51,6 +51,10 @@ metabase:
 
   nginxSidecar:
     enable: false
+    image:
+      repository: gcr.io/ggl-cas-storage/nginx
+      tag: ~ # will be set to the commit sha1 by the make install command
+      pullPolicy: IfNotPresent
     # set to false to deploy the application with an insecure route,
     # and issue an SSL certificate using acme.sh
     sslTermination: true
