--- a/helm/cas-metabase/values-prod.yaml
+++ b/helm/cas-metabase/values-prod.yaml
@@ -31,5 +31,5 @@ metabase:
     # Use Entrust ACME server. This secret is created by cas-pipeline
     # caServerSecret: cas-acme-url
     # caServerKey: url
-    caEmail: matthieu@button.is # Todo: update to ggircs@gov.bc.ca when provisioned
+    caAccountEmail: matthieu@button.is # Todo: update to ggircs@gov.bc.ca when provisioned
     hostName: cas-metabase.nrs.gov.bc.ca
