--- a/helm/cas-metabase/templates/networkPolicy/intra-release-by-release.yaml
+++ b/helm/cas-metabase/templates/networkPolicy/intra-release-by-release.yaml
@@ -2,7 +2,7 @@
 kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
-  name: {{ include "cas-metabase.fullname" . }}-internal
+  name: {{ include "cas-metabase.fullname" . }}-internal-by-release
   labels: {{ include "cas-metabase.labels" . | nindent 4 }}
 spec:
   podSelector:
@@ -13,4 +13,7 @@ spec:
         - podSelector:
             matchLabels:
               release: {{ include "cas-metabase.name" . }}
+        - podSelector:
+            matchLabels:
+              app.kubernetes.io/name: {{ include "cas-metabase.name" . }}
 {{- end }}
