--- a/helm/cas-metabase/templates/networkPolicy/intra-release-by-release.yaml
+++ b/helm/cas-metabase/templates/networkPolicy/intra-release-by-release.yaml
@@ -15,5 +15,5 @@ spec:
               release: {{ include "cas-metabase.name" . }}
         - podSelector:
             matchLabels:
-              app.kubernetes.io/name: {{ include "cas-metabase.name" . }}
+              app.kubernetes.io/instance: {{ include "cas-metabase.name" . }}
 {{- end }}
