--- a/helm/cas-metabase/templates/networkPolicy/intra-release-by-instance.yaml
+++ b/helm/cas-metabase/templates/networkPolicy/intra-release-by-instance.yaml
@@ -2,7 +2,7 @@
 kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
-  name: {{ include "cas-metabase.fullname" . }}-internal-by-name
+  name: {{ include "cas-metabase.fullname" . }}-internal-by-instance
   labels: {{ include "cas-metabase.labels" . | nindent 4 }}
 spec:
   podSelector:
