--- a/helm/cas-metabase/templates/acme/acme-renewal-cron.yaml
+++ b/helm/cas-metabase/templates/acme/acme-renewal-cron.yaml
@@ -42,7 +42,7 @@ spec:
                 - |
                   set -euxo pipefail;
                   # renews the certificate if needed
-                  /tmp/.acme.sh/acme.sh --cron --home /tmp/.acme.sh --server {{ $caServer }};
+                  /tmp/.acme.sh/acme.sh --cron --home /tmp/.acme.sh --server {{ $caServer }} --days {{.Values.metabase.nginxSidecar.renewalDays}};
               volumeMounts:
                 - mountPath: /tmp/.acme.sh
                   name: acme-home
