--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,10 @@ jobs:
         with:
           version: v3.4.0
 
+      - name: Dep Up
+        run: |
+          helm dep up
+
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.2.0
         with:
