--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,16 +20,16 @@ jobs:
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-
       - name: Install Helm
         uses: azure/setup-helm@v1
         with:
-          version: v3.5.4
+          version: v3.4.0
 
-      - name: Dep Up
+      - name: Add helm repos
         run: |
-          cd helm/cas-metabase
-          helm dep up
+          helm repo add charts-incubator https://charts.helm.sh/incubator
+          helm repo add charts-stable https://charts.helm.sh/stable
+          helm repo add cas-postgres https://bcgov.github.io/cas-postgres/
 
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.2.1
