chore: add prod-test-restore cronjob

--- a/helm/cas-metabase/values-test.yaml
+++ b/helm/cas-metabase/values-test.yaml
@@ -15,6 +15,10 @@ route:
   enable: true
   host: cas-metabase-test.apps.silver.devops.gov.bc.ca
 
+restoreFromProd:
+  enable: true
+existingGcpSecret: gcp-9212c9-prod-read-only-service-account-key
+
 metabase:
   nginxSidecar:
     enable: true
