chore: add readonly-db secrets to db-pass template

--- a/helm/cas-metabase/templates/cron-db-pass.yaml
+++ b/helm/cas-metabase/templates/cron-db-pass.yaml
@@ -44,6 +44,16 @@ spec:
                 secretKeyRef:
                   key: password-superuser
                   name: cas-metabase-patroni
+            - name: CIIP_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  key: password
+                  name: ciip-readonly-db
+            - name: GGIRCS_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  key: password
+                  name: ggircs-readonly-db
           name: {{ template "cas-metabase.fullname" . }}-db-pass
           image: {{ .Values.image.psql.repository }}:{{ .Values.image.psql.tag }}
           resources:
